--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-input-colorpicker": "^1.0.13",
     "react-scripts": "3.4.3",
     "react-select-material-ui": "^6.7.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8"
   },
   "scripts": {
     "start": "react-scripts start",
