--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.3",
     "bootstrap-table": "^1.18.1",
+    "jquery": "^3.5.1",
     "material-ui-form": "^1.0.0-alpha.26",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
