--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "jquery": "^3.5.1",
     "material-ui-form": "^1.0.0-alpha.26",
     "react": "^16.13.1",
-    "react-bootstrap": "^1.3.0",
+    "react-bootstrap": "^1.4.0",
     "react-bootstrap-dropdown": "^0.3.0",
     "react-bootstrap-dropdown-menu": "^1.1.19",
     "react-bootstrap-icons": "^1.1.0",
@@ -27,6 +27,7 @@
     "react-flag-icon-css": "^1.0.25",
     "react-input-color": "^3.0.1",
     "react-input-colorpicker": "^1.0.13",
+    "react-multi-email": "^0.5.3",
     "react-scripts": "3.4.3",
     "react-select-material-ui": "^6.7.0",
     "redux": "^4.0.5",
