--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "jquery": "^3.5.1",
     "material-ui-form": "^1.0.0-alpha.26",
     "react": "^16.14.0",
-    "react-bootstrap": "^1.4.0",
+    "react-bootstrap": "^1.4.3",
     "react-bootstrap-dropdown": "^0.3.0",
     "react-bootstrap-dropdown-menu": "^1.1.19",
     "react-bootstrap-icons": "^1.1.0",
+    "react-bootstrap-submenu": "^1.0.1",
     "react-bootstrap-table": "^4.3.1",
     "react-color": "^2.19.3",
     "react-dom": "^16.14.0",
