--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.3",
     "bootstrap-table": "^1.18.1",
+    "history": "^5.0.0",
     "jquery": "^3.5.1",
     "material-ui-form": "^1.0.0-alpha.26",
     "react": "^16.14.0",
