--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-input-color": "^3.0.1",
     "react-input-colorpicker": "^1.0.13",
     "react-multi-email": "^0.5.3",
+    "react-native-webkit-webview": "^0.10.7",
     "react-scripts": "3.4.3",
     "react-select-material-ui": "^6.7.0",
     "redux": "^4.0.5",
