--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-color": "^2.19.3",
     "react-dom": "^16.14.0",
     "react-flag-icon-css": "^1.0.25",
+    "react-history": "^0.18.2",
     "react-input-color": "^3.0.1",
     "react-input-colorpicker": "^1.0.13",
     "react-multi-email": "^0.5.3",
