show card by project

--- a/package.json
+++ b/package.json
@@ -11,16 +11,19 @@
     "@material-ui/core": "^4.11.1",
     "@material-ui/data-grid": "^4.0.0-alpha.10",
     "@material-ui/styles": "^4.11.1",
+    "@material/radio": "^9.0.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.3",
     "bootstrap-table": "^1.18.1",
     "history": "^5.0.0",
+    "icheck-bootstrap": "^3.0.1",
     "jquery": "^3.5.1",
     "material-ui-form": "^1.0.0-alpha.26",
     "react": "^16.14.0",
-    "react-bootstrap": "^1.4.3",
+    "react-bootstrap": "^1.0.0",
+    "react-bootstrap-card": "^0.2.1",
     "react-bootstrap-dropdown": "^0.3.0",
     "react-bootstrap-dropdown-menu": "^1.1.19",
     "react-bootstrap-icons": "^1.1.0",
