--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@material-ui/data-grid": "^4.0.0-alpha.10",
     "@material-ui/styles": "^4.11.1",
     "@material/radio": "^9.0.0",
+    "@react-md/icon": "^2.5.5",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
