--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-multi-email": "^0.5.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-scrollbar": "^0.5.6",
     "react-select-material-ui": "^6.7.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8"
