--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-scrollbar": "^0.5.6",
     "react-select-material-ui": "^6.7.0",
     "redux": "^4.0.5",
+    "redux-devtools": "^3.7.0",
     "redux-devtools-extension": "^2.13.8"
   },
   "scripts": {
