--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.3",
     "bootstrap-table": "^1.18.1",
+    "chroma-js": "^2.1.0",
     "history": "^5.0.0",
     "icheck-bootstrap": "^3.0.1",
     "jquery": "^3.5.1",
