--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.2",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "@material-ui/core": "^4.11.1",
+    "@material-ui/core": "^4.11.3",
     "@material-ui/data-grid": "^4.0.0-alpha.10",
     "@material-ui/styles": "^4.11.1",
     "@material/radio": "^9.0.0",
+    "@material/react-tab": "^0.15.0",
     "@react-md/icon": "^2.5.5",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
