--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-scrollbar": "^0.5.6",
     "react-select": "^4.1.0",
     "react-select-material-ui": "^6.7.0",
+    "react-spring": "^8.0.27",
     "redux": "^4.0.5",
     "redux-devtools": "^3.7.0",
     "redux-devtools-extension": "^2.13.8"
