--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^16.14.0",
     "react-dropdown": "^1.9.2",
     "react-flag-icon-css": "^1.0.25",
+    "react-gantt-timeline": "^0.4.3",
     "react-icons": "^4.2.0",
     "react-input-color": "^3.0.1",
     "react-input-colorpicker": "^1.0.13",
