--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@fortawesome/vue-fontawesome": "^2.0.2",
-    "@leadercodes/leader-header": "^2.0.2",
+    "@leadercodes/leader-header": "^2.0.3",
     "@material-ui/core": "^4.11.3",
     "@material-ui/data-grid": "^4.0.0-alpha.10",
     "@material-ui/styles": "^4.11.1",
@@ -38,6 +38,7 @@
     "react-color": "^2.19.3",
     "react-dom": "^16.14.0",
     "react-dropdown": "^1.9.2",
+    "react-favicon": "0.0.18",
     "react-flag-icon-css": "^1.0.25",
     "react-gantt-timeline": "^0.4.3",
     "react-icons": "^4.2.0",
