--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^4.5.3",
     "bootstrap-table": "^1.18.1",
     "chroma-js": "^2.1.0",
+    "date-diff": "^0.2.2",
     "dhtmlx-gantt": "^7.1.1",
     "history": "^5.0.0",
     "icheck-bootstrap": "^3.0.1",
