--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.3",
     "bootstrap-table": "^1.18.1",
+    "browser-image-compression": "^1.0.14",
     "chroma-js": "^2.1.0",
     "date-diff": "^0.2.2",
     "dhtmlx-gantt": "^7.1.2",
