--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^4.5.3",
     "bootstrap-table": "^1.18.1",
     "browser-image-compression": "^1.0.14",
+    "chart.js": "^3.2.1",
     "chroma-js": "^2.1.0",
     "date-diff": "^0.2.2",
     "dhtmlx-gantt": "^7.1.2",
@@ -38,6 +39,7 @@
     "react-bootstrap-icons": "^1.3.0",
     "react-bootstrap-submenu": "^1.0.1",
     "react-bootstrap-table": "^4.3.1",
+    "react-chartjs-2": "^3.0.3",
     "react-color": "^2.19.3",
     "react-dom": "^16.14.0",
     "react-dropdown": "^1.9.2",
