--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "react-input-colorpicker": "^1.0.13",
     "react-multi-email": "^0.5.3",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^3.4.3",
     "react-scrollbar": "^0.5.6",
     "react-select": "^4.1.0",
     "react-select-material-ui": "^6.7.0",
