--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-bootstrap-icons": "^1.3.0",
     "react-bootstrap-submenu": "^1.0.1",
     "react-bootstrap-table": "^4.3.1",
+    "react-calendar": "^3.4.0",
     "react-color": "^2.19.3",
     "react-dom": "^16.14.0",
     "react-dropdown": "^1.9.2",
