--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-color": "^2.19.3",
     "react-dom": "^16.14.0",
     "react-dropdown": "^1.9.2",
+    "react-fa": "^5.0.0",
     "react-favicon": "0.0.18",
     "react-flag-icon-css": "^1.0.25",
     "react-gantt-timeline": "^0.4.3",
