--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@devexpress/dx-react-chart": "^2.7.5",
+    "@devexpress/dx-react-chart-bootstrap4": "^2.7.5",
+    "@devexpress/dx-react-chart-material-ui": "^2.7.5",
+    "@devexpress/dx-react-core": "^2.7.5",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-brands-svg-icons": "^5.15.2",
     "@fortawesome/free-regular-svg-icons": "^5.15.2",
@@ -22,7 +26,9 @@
     "bootstrap": "^4.5.3",
     "bootstrap-table": "^1.18.1",
     "browser-image-compression": "^1.0.14",
+    "chart.js": "^3.3.0",
     "chroma-js": "^2.1.0",
+    "d3-scale-chromatic": "^2.0.0",
     "date-diff": "^0.2.2",
     "dhtmlx-gantt": "^7.1.2",
     "history": "^5.0.0",
@@ -38,6 +44,9 @@
     "react-bootstrap-icons": "^1.3.0",
     "react-bootstrap-submenu": "^1.0.1",
     "react-bootstrap-table": "^4.3.1",
+    "react-chartjs": "^1.2.0",
+    "react-chartjs-2": "^2.11.2",
+    "react-charts": "^2.0.0-beta.7",
     "react-color": "^2.19.3",
     "react-dom": "^16.14.0",
     "react-dropdown": "^1.9.2",
