--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
     "react-tooltip": "^4.2.18",
     "redux": "^4.0.5",
     "redux-devtools": "^3.7.0",
-    "redux-devtools-extension": "^2.13.8"
+    "redux-devtools-extension": "^2.13.8",
+    "styled-components": "^5.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
