--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "chroma-js": "^2.1.0",
     "d3-scale-chromatic": "^2.0.0",
     "date-diff": "^0.2.2",
+    "devextreme": "21.1.3",
+    "devextreme-react": "21.1.3",
     "dhtmlx-gantt": "^7.1.3",
     "history": "^5.0.0",
     "icheck-bootstrap": "^3.0.1",
@@ -90,6 +92,7 @@
     ]
   },
   "devDependencies": {
-    "react-redux": "^7.2.2"
+    "react-redux": "^7.2.2",
+    "devextreme-themebuilder": "^21.1.3"
   }
 }
