--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "icheck-bootstrap": "^3.0.1",
     "jquery": "^3.5.1",
     "material-ui-form": "^1.0.0-alpha.26",
+    "quill": "^1.3.7",
+    "quill-mention": "^3.0.3",
     "react": "^16.14.0",
     "react-beautiful-dnd": "^13.0.0",
     "react-bootstrap": "^1.0.0",
@@ -58,6 +60,8 @@
     "react-input-color": "^3.0.1",
     "react-input-colorpicker": "^1.0.13",
     "react-multi-email": "^0.5.3",
+    "react-quill": "^1.3.5",
+    "react-quilljs": "^1.2.15",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
     "react-scrollbar": "^0.5.6",
