--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "apexcharts": "^3.27.1",
     "bootstrap": "^4.5.3",
     "bootstrap-table": "^1.18.1",
     "browser-image-compression": "^1.0.14",
@@ -38,6 +39,7 @@
     "jquery": "^3.5.1",
     "material-ui-form": "^1.0.0-alpha.26",
     "react": "^16.14.0",
+    "react-apexcharts": "^1.3.9",
     "react-beautiful-dnd": "^13.0.0",
     "react-bootstrap": "^1.0.0",
     "react-bootstrap-card": "^0.2.1",
