--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-input-color": "^3.0.1",
     "react-input-colorpicker": "^1.0.13",
     "react-multi-email": "^0.5.3",
+    "react-nice-calendar": "^0.1.6",
     "react-quill": "^1.3.5",
     "react-quilljs": "^1.2.15",
     "react-router-dom": "^5.2.0",
