--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "redux": "^4.0.5",
     "redux-devtools": "^3.7.0",
     "redux-devtools-extension": "^2.13.8",
+    "socket.io-client": "^4.1.2",
     "styled-components": "^5.3.0"
   },
   "scripts": {
