--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "icheck-bootstrap": "^3.0.1",
     "jquery": "^3.5.1",
     "material-ui-form": "^1.0.0-alpha.26",
+    "mdbreact": "^5.0.2",
     "quill": "^1.3.7",
     "quill-mention": "^3.0.3",
     "react": "^16.14.0",
