--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-fa": "^5.0.0",
     "react-favicon": "0.0.18",
     "react-flag-icon-css": "^1.0.25",
+    "react-fontawesome": "^1.7.1",
     "react-gantt-timeline": "^0.4.3",
     "react-icons": "^4.2.0",
     "react-input-color": "^3.0.1",
