upload file in past image & modal img

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "apexcharts": "^3.27.1",
+    "array-move": "^3.0.1",
     "bootstrap": "^4.5.3",
     "bootstrap-table": "^1.18.1",
     "browser-image-compression": "^1.0.14",
@@ -62,6 +63,8 @@
     "react-flag-icon-css": "^1.0.25",
     "react-gantt-timeline": "^0.4.3",
     "react-icons": "^4.2.0",
+    "react-image-lightbox": "^5.1.4",
+    "react-images": "^1.2.0-beta.7",
     "react-input-color": "^3.0.1",
     "react-input-colorpicker": "^1.0.13",
     "react-multi-email": "^0.5.3",
@@ -73,11 +76,13 @@
     "react-scrollbar": "^0.5.6",
     "react-select": "^4.1.0",
     "react-select-material-ui": "^6.7.0",
+    "react-sortable-hoc": "^2.0.0",
     "react-spring": "^8.0.27",
     "react-tooltip": "^4.2.18",
     "redux": "^4.0.5",
     "redux-devtools": "^3.7.0",
     "redux-devtools-extension": "^2.13.8",
+    "simple-react-lightbox": "^3.6.6",
     "styled-components": "^5.3.0"
   },
   "scripts": {
